# fand

./: .gitignore  CMakeLists.txt  Makefile  NOTES.txt  README.md  TODO.txt  config.ini  config.ini.example  cpu_interface_generic.c  fan_interface_pigpiodif2.c  fand  fand.c  fand.h  schematic.sch
include/: cpu_interface.h  fan_interface.h
src/: CMakeLists.txt  fan_interface_pigpiodif2_pipe.c
